syntax = "proto3";

option java_multiple_files = true;
option java_package = "dev.restate.sdk.core.impl.testservices";
option java_outer_classname = "CommonProto";

package common;

message CounterUpdateResult {
  int64 old_value = 1;
  int64 new_value = 2;
}
