syntax = "proto3";

package counter;

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";
import "common.proto";

option java_multiple_files = true;
option java_package = "dev.restate.sdk.core.impl.testservices";
option java_outer_classname = "CounterProto";

service Counter {
  option (dev.restate.ext.service_type) = KEYED;

  rpc Reset (CounterRequest) returns (google.protobuf.Empty);
  rpc Add (CounterAddRequest) returns (google.protobuf.Empty);
  rpc Get (CounterRequest) returns (GetResponse);
  rpc GetAndAdd (CounterAddRequest) returns (common.CounterUpdateResult);
}

message CounterRequest {
  string counter_name = 1 [(dev.restate.ext.field) = KEY];
}

message CounterAddRequest {
  string counter_name = 1 [(dev.restate.ext.field) = KEY];
  int64 value = 2;
}

message GetResponse {
  int64 value = 1;
}